A4_Jorge_Rivera/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    UMINUS

Grammar

Rule 0     S' -> global_facts
Rule 1     global_facts -> facts exec_line
Rule 2     facts -> func_def facts
Rule 3     facts -> assign facts
Rule 4     facts -> <empty>
Rule 5     func_def -> FUNC ID_FUNC LBRACE params RBRACE ASSIGN stm END
Rule 6     params -> ID_FUNC COMMA params
Rule 7     params -> ID COMMA params
Rule 8     params -> ID_FUNC
Rule 9     params -> ID
Rule 10    assign -> VAL ID ASSIGN stm END
Rule 11    stm -> ID_FUNC LBRACE args RBRACE
Rule 12    args -> ID_FUNC COMMA args
Rule 13    args -> stm COMMA args
Rule 14    args -> ID_FUNC
Rule 15    args -> stm
Rule 16    stm -> stm PLUS stm
Rule 17    stm -> stm MINUS stm
Rule 18    stm -> stm TIMES stm
Rule 19    stm -> stm DIVIDE stm
Rule 20    stm -> stm DOT stm
Rule 21    stm -> stm LESSTHAN stm
Rule 22    stm -> stm GREATERTHAN stm
Rule 23    stm -> stm EQUAL stm
Rule 24    stm -> stm AND stm
Rule 25    stm -> stm OR stm
Rule 26    stm -> STRING
Rule 27    stm -> NUMBER
Rule 28    stm -> TRUE
Rule 29    stm -> FALSE
Rule 30    stm -> NIL
Rule 31    stm -> ID
Rule 32    stm -> LPAREN stm RPAREN
Rule 33    stm -> IF stm THEN stm ELSE stm END
Rule 34    stm -> LET facts IN stm END
Rule 35    exec_line -> EXEC stm
Rule 36    stm -> MINUS stm

Terminals, with rules where they appear

AND                  : 24
ASSIGN               : 5 10
COMMA                : 6 7 12 13
DIVIDE               : 19
DOT                  : 20
ELSE                 : 33
END                  : 5 10 33 34
EQUAL                : 23
EXEC                 : 35
FALSE                : 29
FUNC                 : 5
GREATERTHAN          : 22
ID                   : 7 9 10 31
ID_FUNC              : 5 6 8 11 12 14
IF                   : 33
IN                   : 34
LBRACE               : 5 11
LESSTHAN             : 21
LET                  : 34
LPAREN               : 32
MINUS                : 17 36
NIL                  : 30
NUMBER               : 27
OR                   : 25
PLUS                 : 16
RBRACE               : 5 11
RPAREN               : 32
STRING               : 26
THEN                 : 33
TIMES                : 18
TRUE                 : 28
UMINUS               : 
VAL                  : 10
error                : 

Nonterminals, with rules where they appear

args                 : 11 12 13
assign               : 3
exec_line            : 1
facts                : 1 2 3 34
func_def             : 2
global_facts         : 0
params               : 5 6 7
stm                  : 5 10 13 15 16 16 17 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 32 33 33 33 34 35 36

Parsing method: LALR

state 0

    (0) S' -> . global_facts
    (1) global_facts -> . facts exec_line
    (2) facts -> . func_def facts
    (3) facts -> . assign facts
    (4) facts -> .
    (5) func_def -> . FUNC ID_FUNC LBRACE params RBRACE ASSIGN stm END
    (10) assign -> . VAL ID ASSIGN stm END

    EXEC            reduce using rule 4 (facts -> .)
    FUNC            shift and go to state 5
    VAL             shift and go to state 6

    global_facts                   shift and go to state 1
    facts                          shift and go to state 2
    func_def                       shift and go to state 3
    assign                         shift and go to state 4

state 1

    (0) S' -> global_facts .



state 2

    (1) global_facts -> facts . exec_line
    (35) exec_line -> . EXEC stm

    EXEC            shift and go to state 8

    exec_line                      shift and go to state 7

state 3

    (2) facts -> func_def . facts
    (2) facts -> . func_def facts
    (3) facts -> . assign facts
    (4) facts -> .
    (5) func_def -> . FUNC ID_FUNC LBRACE params RBRACE ASSIGN stm END
    (10) assign -> . VAL ID ASSIGN stm END

    EXEC            reduce using rule 4 (facts -> .)
    IN              reduce using rule 4 (facts -> .)
    FUNC            shift and go to state 5
    VAL             shift and go to state 6

    func_def                       shift and go to state 3
    facts                          shift and go to state 9
    assign                         shift and go to state 4

state 4

    (3) facts -> assign . facts
    (2) facts -> . func_def facts
    (3) facts -> . assign facts
    (4) facts -> .
    (5) func_def -> . FUNC ID_FUNC LBRACE params RBRACE ASSIGN stm END
    (10) assign -> . VAL ID ASSIGN stm END

    EXEC            reduce using rule 4 (facts -> .)
    IN              reduce using rule 4 (facts -> .)
    FUNC            shift and go to state 5
    VAL             shift and go to state 6

    assign                         shift and go to state 4
    facts                          shift and go to state 10
    func_def                       shift and go to state 3

state 5

    (5) func_def -> FUNC . ID_FUNC LBRACE params RBRACE ASSIGN stm END

    ID_FUNC         shift and go to state 11


state 6

    (10) assign -> VAL . ID ASSIGN stm END

    ID              shift and go to state 12


state 7

    (1) global_facts -> facts exec_line .

    $end            reduce using rule 1 (global_facts -> facts exec_line .)


state 8

    (35) exec_line -> EXEC . stm
    (11) stm -> . ID_FUNC LBRACE args RBRACE
    (16) stm -> . stm PLUS stm
    (17) stm -> . stm MINUS stm
    (18) stm -> . stm TIMES stm
    (19) stm -> . stm DIVIDE stm
    (20) stm -> . stm DOT stm
    (21) stm -> . stm LESSTHAN stm
    (22) stm -> . stm GREATERTHAN stm
    (23) stm -> . stm EQUAL stm
    (24) stm -> . stm AND stm
    (25) stm -> . stm OR stm
    (26) stm -> . STRING
    (27) stm -> . NUMBER
    (28) stm -> . TRUE
    (29) stm -> . FALSE
    (30) stm -> . NIL
    (31) stm -> . ID
    (32) stm -> . LPAREN stm RPAREN
    (33) stm -> . IF stm THEN stm ELSE stm END
    (34) stm -> . LET facts IN stm END
    (36) stm -> . MINUS stm

    ID_FUNC         shift and go to state 14
    STRING          shift and go to state 16
    NUMBER          shift and go to state 17
    TRUE            shift and go to state 18
    FALSE           shift and go to state 19
    NIL             shift and go to state 20
    ID              shift and go to state 21
    LPAREN          shift and go to state 22
    IF              shift and go to state 23
    LET             shift and go to state 24
    MINUS           shift and go to state 15

    stm                            shift and go to state 13

state 9

    (2) facts -> func_def facts .

    EXEC            reduce using rule 2 (facts -> func_def facts .)
    IN              reduce using rule 2 (facts -> func_def facts .)


state 10

    (3) facts -> assign facts .

    EXEC            reduce using rule 3 (facts -> assign facts .)
    IN              reduce using rule 3 (facts -> assign facts .)


state 11

    (5) func_def -> FUNC ID_FUNC . LBRACE params RBRACE ASSIGN stm END

    LBRACE          shift and go to state 25


state 12

    (10) assign -> VAL ID . ASSIGN stm END

    ASSIGN          shift and go to state 26


state 13

    (35) exec_line -> EXEC stm .
    (16) stm -> stm . PLUS stm
    (17) stm -> stm . MINUS stm
    (18) stm -> stm . TIMES stm
    (19) stm -> stm . DIVIDE stm
    (20) stm -> stm . DOT stm
    (21) stm -> stm . LESSTHAN stm
    (22) stm -> stm . GREATERTHAN stm
    (23) stm -> stm . EQUAL stm
    (24) stm -> stm . AND stm
    (25) stm -> stm . OR stm

    $end            reduce using rule 35 (exec_line -> EXEC stm .)
    PLUS            shift and go to state 27
    MINUS           shift and go to state 28
    TIMES           shift and go to state 29
    DIVIDE          shift and go to state 30
    DOT             shift and go to state 31
    LESSTHAN        shift and go to state 32
    GREATERTHAN     shift and go to state 33
    EQUAL           shift and go to state 34
    AND             shift and go to state 35
    OR              shift and go to state 36


state 14

    (11) stm -> ID_FUNC . LBRACE args RBRACE

    LBRACE          shift and go to state 37


state 15

    (36) stm -> MINUS . stm
    (11) stm -> . ID_FUNC LBRACE args RBRACE
    (16) stm -> . stm PLUS stm
    (17) stm -> . stm MINUS stm
    (18) stm -> . stm TIMES stm
    (19) stm -> . stm DIVIDE stm
    (20) stm -> . stm DOT stm
    (21) stm -> . stm LESSTHAN stm
    (22) stm -> . stm GREATERTHAN stm
    (23) stm -> . stm EQUAL stm
    (24) stm -> . stm AND stm
    (25) stm -> . stm OR stm
    (26) stm -> . STRING
    (27) stm -> . NUMBER
    (28) stm -> . TRUE
    (29) stm -> . FALSE
    (30) stm -> . NIL
    (31) stm -> . ID
    (32) stm -> . LPAREN stm RPAREN
    (33) stm -> . IF stm THEN stm ELSE stm END
    (34) stm -> . LET facts IN stm END
    (36) stm -> . MINUS stm

    ID_FUNC         shift and go to state 14
    STRING          shift and go to state 16
    NUMBER          shift and go to state 17
    TRUE            shift and go to state 18
    FALSE           shift and go to state 19
    NIL             shift and go to state 20
    ID              shift and go to state 21
    LPAREN          shift and go to state 22
    IF              shift and go to state 23
    LET             shift and go to state 24
    MINUS           shift and go to state 15

    stm                            shift and go to state 38

state 16

    (26) stm -> STRING .

    PLUS            reduce using rule 26 (stm -> STRING .)
    MINUS           reduce using rule 26 (stm -> STRING .)
    TIMES           reduce using rule 26 (stm -> STRING .)
    DIVIDE          reduce using rule 26 (stm -> STRING .)
    DOT             reduce using rule 26 (stm -> STRING .)
    LESSTHAN        reduce using rule 26 (stm -> STRING .)
    GREATERTHAN     reduce using rule 26 (stm -> STRING .)
    EQUAL           reduce using rule 26 (stm -> STRING .)
    AND             reduce using rule 26 (stm -> STRING .)
    OR              reduce using rule 26 (stm -> STRING .)
    $end            reduce using rule 26 (stm -> STRING .)
    RPAREN          reduce using rule 26 (stm -> STRING .)
    THEN            reduce using rule 26 (stm -> STRING .)
    END             reduce using rule 26 (stm -> STRING .)
    COMMA           reduce using rule 26 (stm -> STRING .)
    RBRACE          reduce using rule 26 (stm -> STRING .)
    ELSE            reduce using rule 26 (stm -> STRING .)


state 17

    (27) stm -> NUMBER .

    PLUS            reduce using rule 27 (stm -> NUMBER .)
    MINUS           reduce using rule 27 (stm -> NUMBER .)
    TIMES           reduce using rule 27 (stm -> NUMBER .)
    DIVIDE          reduce using rule 27 (stm -> NUMBER .)
    DOT             reduce using rule 27 (stm -> NUMBER .)
    LESSTHAN        reduce using rule 27 (stm -> NUMBER .)
    GREATERTHAN     reduce using rule 27 (stm -> NUMBER .)
    EQUAL           reduce using rule 27 (stm -> NUMBER .)
    AND             reduce using rule 27 (stm -> NUMBER .)
    OR              reduce using rule 27 (stm -> NUMBER .)
    $end            reduce using rule 27 (stm -> NUMBER .)
    RPAREN          reduce using rule 27 (stm -> NUMBER .)
    THEN            reduce using rule 27 (stm -> NUMBER .)
    END             reduce using rule 27 (stm -> NUMBER .)
    COMMA           reduce using rule 27 (stm -> NUMBER .)
    RBRACE          reduce using rule 27 (stm -> NUMBER .)
    ELSE            reduce using rule 27 (stm -> NUMBER .)


state 18

    (28) stm -> TRUE .

    PLUS            reduce using rule 28 (stm -> TRUE .)
    MINUS           reduce using rule 28 (stm -> TRUE .)
    TIMES           reduce using rule 28 (stm -> TRUE .)
    DIVIDE          reduce using rule 28 (stm -> TRUE .)
    DOT             reduce using rule 28 (stm -> TRUE .)
    LESSTHAN        reduce using rule 28 (stm -> TRUE .)
    GREATERTHAN     reduce using rule 28 (stm -> TRUE .)
    EQUAL           reduce using rule 28 (stm -> TRUE .)
    AND             reduce using rule 28 (stm -> TRUE .)
    OR              reduce using rule 28 (stm -> TRUE .)
    $end            reduce using rule 28 (stm -> TRUE .)
    RPAREN          reduce using rule 28 (stm -> TRUE .)
    THEN            reduce using rule 28 (stm -> TRUE .)
    END             reduce using rule 28 (stm -> TRUE .)
    COMMA           reduce using rule 28 (stm -> TRUE .)
    RBRACE          reduce using rule 28 (stm -> TRUE .)
    ELSE            reduce using rule 28 (stm -> TRUE .)


state 19

    (29) stm -> FALSE .

    PLUS            reduce using rule 29 (stm -> FALSE .)
    MINUS           reduce using rule 29 (stm -> FALSE .)
    TIMES           reduce using rule 29 (stm -> FALSE .)
    DIVIDE          reduce using rule 29 (stm -> FALSE .)
    DOT             reduce using rule 29 (stm -> FALSE .)
    LESSTHAN        reduce using rule 29 (stm -> FALSE .)
    GREATERTHAN     reduce using rule 29 (stm -> FALSE .)
    EQUAL           reduce using rule 29 (stm -> FALSE .)
    AND             reduce using rule 29 (stm -> FALSE .)
    OR              reduce using rule 29 (stm -> FALSE .)
    $end            reduce using rule 29 (stm -> FALSE .)
    RPAREN          reduce using rule 29 (stm -> FALSE .)
    THEN            reduce using rule 29 (stm -> FALSE .)
    END             reduce using rule 29 (stm -> FALSE .)
    COMMA           reduce using rule 29 (stm -> FALSE .)
    RBRACE          reduce using rule 29 (stm -> FALSE .)
    ELSE            reduce using rule 29 (stm -> FALSE .)


state 20

    (30) stm -> NIL .

    PLUS            reduce using rule 30 (stm -> NIL .)
    MINUS           reduce using rule 30 (stm -> NIL .)
    TIMES           reduce using rule 30 (stm -> NIL .)
    DIVIDE          reduce using rule 30 (stm -> NIL .)
    DOT             reduce using rule 30 (stm -> NIL .)
    LESSTHAN        reduce using rule 30 (stm -> NIL .)
    GREATERTHAN     reduce using rule 30 (stm -> NIL .)
    EQUAL           reduce using rule 30 (stm -> NIL .)
    AND             reduce using rule 30 (stm -> NIL .)
    OR              reduce using rule 30 (stm -> NIL .)
    $end            reduce using rule 30 (stm -> NIL .)
    RPAREN          reduce using rule 30 (stm -> NIL .)
    THEN            reduce using rule 30 (stm -> NIL .)
    END             reduce using rule 30 (stm -> NIL .)
    COMMA           reduce using rule 30 (stm -> NIL .)
    RBRACE          reduce using rule 30 (stm -> NIL .)
    ELSE            reduce using rule 30 (stm -> NIL .)


state 21

    (31) stm -> ID .

    PLUS            reduce using rule 31 (stm -> ID .)
    MINUS           reduce using rule 31 (stm -> ID .)
    TIMES           reduce using rule 31 (stm -> ID .)
    DIVIDE          reduce using rule 31 (stm -> ID .)
    DOT             reduce using rule 31 (stm -> ID .)
    LESSTHAN        reduce using rule 31 (stm -> ID .)
    GREATERTHAN     reduce using rule 31 (stm -> ID .)
    EQUAL           reduce using rule 31 (stm -> ID .)
    AND             reduce using rule 31 (stm -> ID .)
    OR              reduce using rule 31 (stm -> ID .)
    $end            reduce using rule 31 (stm -> ID .)
    RPAREN          reduce using rule 31 (stm -> ID .)
    THEN            reduce using rule 31 (stm -> ID .)
    END             reduce using rule 31 (stm -> ID .)
    COMMA           reduce using rule 31 (stm -> ID .)
    RBRACE          reduce using rule 31 (stm -> ID .)
    ELSE            reduce using rule 31 (stm -> ID .)


state 22

    (32) stm -> LPAREN . stm RPAREN
    (11) stm -> . ID_FUNC LBRACE args RBRACE
    (16) stm -> . stm PLUS stm
    (17) stm -> . stm MINUS stm
    (18) stm -> . stm TIMES stm
    (19) stm -> . stm DIVIDE stm
    (20) stm -> . stm DOT stm
    (21) stm -> . stm LESSTHAN stm
    (22) stm -> . stm GREATERTHAN stm
    (23) stm -> . stm EQUAL stm
    (24) stm -> . stm AND stm
    (25) stm -> . stm OR stm
    (26) stm -> . STRING
    (27) stm -> . NUMBER
    (28) stm -> . TRUE
    (29) stm -> . FALSE
    (30) stm -> . NIL
    (31) stm -> . ID
    (32) stm -> . LPAREN stm RPAREN
    (33) stm -> . IF stm THEN stm ELSE stm END
    (34) stm -> . LET facts IN stm END
    (36) stm -> . MINUS stm

    ID_FUNC         shift and go to state 14
    STRING          shift and go to state 16
    NUMBER          shift and go to state 17
    TRUE            shift and go to state 18
    FALSE           shift and go to state 19
    NIL             shift and go to state 20
    ID              shift and go to state 21
    LPAREN          shift and go to state 22
    IF              shift and go to state 23
    LET             shift and go to state 24
    MINUS           shift and go to state 15

    stm                            shift and go to state 39

state 23

    (33) stm -> IF . stm THEN stm ELSE stm END
    (11) stm -> . ID_FUNC LBRACE args RBRACE
    (16) stm -> . stm PLUS stm
    (17) stm -> . stm MINUS stm
    (18) stm -> . stm TIMES stm
    (19) stm -> . stm DIVIDE stm
    (20) stm -> . stm DOT stm
    (21) stm -> . stm LESSTHAN stm
    (22) stm -> . stm GREATERTHAN stm
    (23) stm -> . stm EQUAL stm
    (24) stm -> . stm AND stm
    (25) stm -> . stm OR stm
    (26) stm -> . STRING
    (27) stm -> . NUMBER
    (28) stm -> . TRUE
    (29) stm -> . FALSE
    (30) stm -> . NIL
    (31) stm -> . ID
    (32) stm -> . LPAREN stm RPAREN
    (33) stm -> . IF stm THEN stm ELSE stm END
    (34) stm -> . LET facts IN stm END
    (36) stm -> . MINUS stm

    ID_FUNC         shift and go to state 14
    STRING          shift and go to state 16
    NUMBER          shift and go to state 17
    TRUE            shift and go to state 18
    FALSE           shift and go to state 19
    NIL             shift and go to state 20
    ID              shift and go to state 21
    LPAREN          shift and go to state 22
    IF              shift and go to state 23
    LET             shift and go to state 24
    MINUS           shift and go to state 15

    stm                            shift and go to state 40

state 24

    (34) stm -> LET . facts IN stm END
    (2) facts -> . func_def facts
    (3) facts -> . assign facts
    (4) facts -> .
    (5) func_def -> . FUNC ID_FUNC LBRACE params RBRACE ASSIGN stm END
    (10) assign -> . VAL ID ASSIGN stm END

    IN              reduce using rule 4 (facts -> .)
    FUNC            shift and go to state 5
    VAL             shift and go to state 6

    facts                          shift and go to state 41
    func_def                       shift and go to state 3
    assign                         shift and go to state 4

state 25

    (5) func_def -> FUNC ID_FUNC LBRACE . params RBRACE ASSIGN stm END
    (6) params -> . ID_FUNC COMMA params
    (7) params -> . ID COMMA params
    (8) params -> . ID_FUNC
    (9) params -> . ID

    ID_FUNC         shift and go to state 42
    ID              shift and go to state 44

    params                         shift and go to state 43

state 26

    (10) assign -> VAL ID ASSIGN . stm END
    (11) stm -> . ID_FUNC LBRACE args RBRACE
    (16) stm -> . stm PLUS stm
    (17) stm -> . stm MINUS stm
    (18) stm -> . stm TIMES stm
    (19) stm -> . stm DIVIDE stm
    (20) stm -> . stm DOT stm
    (21) stm -> . stm LESSTHAN stm
    (22) stm -> . stm GREATERTHAN stm
    (23) stm -> . stm EQUAL stm
    (24) stm -> . stm AND stm
    (25) stm -> . stm OR stm
    (26) stm -> . STRING
    (27) stm -> . NUMBER
    (28) stm -> . TRUE
    (29) stm -> . FALSE
    (30) stm -> . NIL
    (31) stm -> . ID
    (32) stm -> . LPAREN stm RPAREN
    (33) stm -> . IF stm THEN stm ELSE stm END
    (34) stm -> . LET facts IN stm END
    (36) stm -> . MINUS stm

    ID_FUNC         shift and go to state 14
    STRING          shift and go to state 16
    NUMBER          shift and go to state 17
    TRUE            shift and go to state 18
    FALSE           shift and go to state 19
    NIL             shift and go to state 20
    ID              shift and go to state 21
    LPAREN          shift and go to state 22
    IF              shift and go to state 23
    LET             shift and go to state 24
    MINUS           shift and go to state 15

    stm                            shift and go to state 45

state 27

    (16) stm -> stm PLUS . stm
    (11) stm -> . ID_FUNC LBRACE args RBRACE
    (16) stm -> . stm PLUS stm
    (17) stm -> . stm MINUS stm
    (18) stm -> . stm TIMES stm
    (19) stm -> . stm DIVIDE stm
    (20) stm -> . stm DOT stm
    (21) stm -> . stm LESSTHAN stm
    (22) stm -> . stm GREATERTHAN stm
    (23) stm -> . stm EQUAL stm
    (24) stm -> . stm AND stm
    (25) stm -> . stm OR stm
    (26) stm -> . STRING
    (27) stm -> . NUMBER
    (28) stm -> . TRUE
    (29) stm -> . FALSE
    (30) stm -> . NIL
    (31) stm -> . ID
    (32) stm -> . LPAREN stm RPAREN
    (33) stm -> . IF stm THEN stm ELSE stm END
    (34) stm -> . LET facts IN stm END
    (36) stm -> . MINUS stm

    ID_FUNC         shift and go to state 14
    STRING          shift and go to state 16
    NUMBER          shift and go to state 17
    TRUE            shift and go to state 18
    FALSE           shift and go to state 19
    NIL             shift and go to state 20
    ID              shift and go to state 21
    LPAREN          shift and go to state 22
    IF              shift and go to state 23
    LET             shift and go to state 24
    MINUS           shift and go to state 15

    stm                            shift and go to state 46

state 28

    (17) stm -> stm MINUS . stm
    (11) stm -> . ID_FUNC LBRACE args RBRACE
    (16) stm -> . stm PLUS stm
    (17) stm -> . stm MINUS stm
    (18) stm -> . stm TIMES stm
    (19) stm -> . stm DIVIDE stm
    (20) stm -> . stm DOT stm
    (21) stm -> . stm LESSTHAN stm
    (22) stm -> . stm GREATERTHAN stm
    (23) stm -> . stm EQUAL stm
    (24) stm -> . stm AND stm
    (25) stm -> . stm OR stm
    (26) stm -> . STRING
    (27) stm -> . NUMBER
    (28) stm -> . TRUE
    (29) stm -> . FALSE
    (30) stm -> . NIL
    (31) stm -> . ID
    (32) stm -> . LPAREN stm RPAREN
    (33) stm -> . IF stm THEN stm ELSE stm END
    (34) stm -> . LET facts IN stm END
    (36) stm -> . MINUS stm

    ID_FUNC         shift and go to state 14
    STRING          shift and go to state 16
    NUMBER          shift and go to state 17
    TRUE            shift and go to state 18
    FALSE           shift and go to state 19
    NIL             shift and go to state 20
    ID              shift and go to state 21
    LPAREN          shift and go to state 22
    IF              shift and go to state 23
    LET             shift and go to state 24
    MINUS           shift and go to state 15

    stm                            shift and go to state 47

state 29

    (18) stm -> stm TIMES . stm
    (11) stm -> . ID_FUNC LBRACE args RBRACE
    (16) stm -> . stm PLUS stm
    (17) stm -> . stm MINUS stm
    (18) stm -> . stm TIMES stm
    (19) stm -> . stm DIVIDE stm
    (20) stm -> . stm DOT stm
    (21) stm -> . stm LESSTHAN stm
    (22) stm -> . stm GREATERTHAN stm
    (23) stm -> . stm EQUAL stm
    (24) stm -> . stm AND stm
    (25) stm -> . stm OR stm
    (26) stm -> . STRING
    (27) stm -> . NUMBER
    (28) stm -> . TRUE
    (29) stm -> . FALSE
    (30) stm -> . NIL
    (31) stm -> . ID
    (32) stm -> . LPAREN stm RPAREN
    (33) stm -> . IF stm THEN stm ELSE stm END
    (34) stm -> . LET facts IN stm END
    (36) stm -> . MINUS stm

    ID_FUNC         shift and go to state 14
    STRING          shift and go to state 16
    NUMBER          shift and go to state 17
    TRUE            shift and go to state 18
    FALSE           shift and go to state 19
    NIL             shift and go to state 20
    ID              shift and go to state 21
    LPAREN          shift and go to state 22
    IF              shift and go to state 23
    LET             shift and go to state 24
    MINUS           shift and go to state 15

    stm                            shift and go to state 48

state 30

    (19) stm -> stm DIVIDE . stm
    (11) stm -> . ID_FUNC LBRACE args RBRACE
    (16) stm -> . stm PLUS stm
    (17) stm -> . stm MINUS stm
    (18) stm -> . stm TIMES stm
    (19) stm -> . stm DIVIDE stm
    (20) stm -> . stm DOT stm
    (21) stm -> . stm LESSTHAN stm
    (22) stm -> . stm GREATERTHAN stm
    (23) stm -> . stm EQUAL stm
    (24) stm -> . stm AND stm
    (25) stm -> . stm OR stm
    (26) stm -> . STRING
    (27) stm -> . NUMBER
    (28) stm -> . TRUE
    (29) stm -> . FALSE
    (30) stm -> . NIL
    (31) stm -> . ID
    (32) stm -> . LPAREN stm RPAREN
    (33) stm -> . IF stm THEN stm ELSE stm END
    (34) stm -> . LET facts IN stm END
    (36) stm -> . MINUS stm

    ID_FUNC         shift and go to state 14
    STRING          shift and go to state 16
    NUMBER          shift and go to state 17
    TRUE            shift and go to state 18
    FALSE           shift and go to state 19
    NIL             shift and go to state 20
    ID              shift and go to state 21
    LPAREN          shift and go to state 22
    IF              shift and go to state 23
    LET             shift and go to state 24
    MINUS           shift and go to state 15

    stm                            shift and go to state 49

state 31

    (20) stm -> stm DOT . stm
    (11) stm -> . ID_FUNC LBRACE args RBRACE
    (16) stm -> . stm PLUS stm
    (17) stm -> . stm MINUS stm
    (18) stm -> . stm TIMES stm
    (19) stm -> . stm DIVIDE stm
    (20) stm -> . stm DOT stm
    (21) stm -> . stm LESSTHAN stm
    (22) stm -> . stm GREATERTHAN stm
    (23) stm -> . stm EQUAL stm
    (24) stm -> . stm AND stm
    (25) stm -> . stm OR stm
    (26) stm -> . STRING
    (27) stm -> . NUMBER
    (28) stm -> . TRUE
    (29) stm -> . FALSE
    (30) stm -> . NIL
    (31) stm -> . ID
    (32) stm -> . LPAREN stm RPAREN
    (33) stm -> . IF stm THEN stm ELSE stm END
    (34) stm -> . LET facts IN stm END
    (36) stm -> . MINUS stm
